<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/postionLabelTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/positionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:text="@string/position"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/channel1positionTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/channel1positionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/channel1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/channel1PositionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3000"
                android:progress="1500" />
        </TableRow>

        <TableRow
            android:id="@+id/channel2positionTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/channel2positionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/channel2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/channel2PositionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3000"
                android:progress="1500" />
        </TableRow>

        <TableRow
            android:id="@+id/channel3positionTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/channel3positionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/channel3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/channel3PositionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3000"
                android:progress="1500" />
        </TableRow>

        <TableRow
            android:id="@+id/channel4positionTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/channel4positionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/channel4"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/channel4PositionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3000"
                android:progress="1500" />
        </TableRow>

        <TableRow
            android:id="@+id/channel5positionTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/channel5positionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/channel5"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/channel5PositionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3000"
                android:progress="1500" />
        </TableRow>

        <TableRow
            android:id="@+id/channel6positionTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/channel6positionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/channel6"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/channel6PositionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3000"
                android:progress="1500" />
        </TableRow>

        <TableRow
            android:id="@+id/pwmLabelTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/pwmLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:text="@string/pwm"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/onTimeTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pwmontimelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/ontime"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/pwmOnTimeBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="3000"
                android:progress="1500" />
        </TableRow>

        <TableRow
            android:id="@+id/periodTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pwmperiodlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/period"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/pwmPeriodBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="3000"
                android:progress="1500" />
        </TableRow>

        <TableRow
            android:id="@+id/homeButtonTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/moveAllChannelsToHomePosition" />
        </TableRow>

        <TableRow
            android:id="@+id/errorsLabelTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/errorsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:text="@string/errors"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/errorsTableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/errorsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_span="2"
                android:paddingBottom="4dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>

</ScrollView>